<resources>
    <string name="app_name">SD2550Project</string>
    <string name="select_card_count">Select Card Count</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string-array name="card_count">
        <item>4 Cards</item>
        <item>6 Cards</item>
        <item>8 Cards</item>
        <item>10 Cards</item>
        <item>12 Cards</item>
        <item>14 Cards</item>
        <item>16 Cards</item>
        <item>18 Cards</item>
        <item>20 Cards</item>
    </string-array>
    <string name="start">Start</string>

    <string name="score">Score: </string>
    <string name="high_score">High Score: </string>
    <string name="try_again">Try Again</string>
    <string name="new_game">New Game</string>
    <string name="end_game">End Game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_to_leave">Do you want to leave</string>
    <string name="stop">Stop</string>
    <string name="play_sound">Play</string>
    <string-array name="words">
        <item>AAA</item>
        <item>BBB</item>
        <item>CCC</item>
        <item>DDD</item>
        <item>EEE</item>
        <item>FFF</item>
        <item>GGG</item>
        <item>HHH</item>
        <item>III</item>
        <item>JJJ</item>
    </string-array>
</resources>
